<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/settings_top_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:text="@string/settings_top_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/photo_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="30dp"
        android:text="@string/photo_switch_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/settings_top_text"
        android:checked="true" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/position_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/position_switch_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/photo_switch"
        android:checked="true" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/rank_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/rank_switch_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/position_switch"
        android:checked="true" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/name_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name_switch_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rank_switch"
        android:checked="true" />

</androidx.constraintlayout.widget.ConstraintLayout>